--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -119,18 +119,18 @@
                   </ul>
                 </div>
                 <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
-                  <button
+                  <a
                     type="button"
-                    class="rounded-pill bg-white flex-grow-1 scale-text page-button"
-                    onclick="login()"
+                    class="btn rounded-pill bg-white flex-grow-1 scale-text page-button"
+                    href="../pages/signin.html"
                   >
                     新規登録
-                  </button>
+                  </a>
                   <a
                     type="button"
                     class="btn rounded-pill text-white flex-grow-1 scale-text page-button"
                     style="padding-left: 24px; padding-right: 24px"
-                    href="#"
+                    href="../pages/register.html"
                   >
                     ログイン
                   </a>
@@ -223,7 +223,10 @@
                                 </div>
                               </li>
                               <li>
-                                <div class="dropdown-item d-flex gap-2" onclick="location.href='./change-password.html';">
+                                <div
+                                  class="dropdown-item d-flex gap-2"
+                                  onclick="location.href='./change-password.html';"
+                                >
                                   <span
                                     ><i class="fa-solid fa-pen-to-square"></i
                                   ></span>
@@ -272,9 +275,13 @@
 
           <div class="page-form-container">
             <div class="path-container">
-              <span><i class="fa-solid fa-house"></i></span>
-              <p class="shrink-p">\</p>
-              <p class="shrink-p" style="color: #1a2d44">バスワード忘れ</p>
+              <span
+                ><i class="fa-solid fa-house" style="color: lightgray"></i
+              ></span>
+              <p class="shrink-p" style="color: lightgray">\</p>
+              <p class="shrink-p" style="color: #1a2d44; font-size: 12px">
+                バスワード忘れ
+              </p>
             </div>
             <div class="page-form">
               <p class="shrink-p page-title">パスワード忘れ</p>
@@ -295,7 +302,11 @@
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </button>
                 </div>
-                <a class="shrink-p back-to-login" href="javascript:history.back()">サインインに戻り</a>
+                <a
+                  class="shrink-p back-to-login"
+                  href="javascript:history.back()"
+                  >サインインに戻り</a
+                >
               </div>
             </div>
           </div>
