--- a/pages/register.html
+++ b/pages/register.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="../css/change-password.css" />
+    <link rel="stylesheet" href="../css/register.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -266,13 +266,7 @@
         <hr class="solid my-0" />
       </header>
       <main style="display: flex; flex-direction: column">
-        <div class="body-container" style="height: 600px">
-          <img
-            class="big-logo-background"
-            src="../assets/big-logo.png"
-            alt="background"
-          />
-
+        <div class="body-container">
           <div class="page-form-container">
             <div class="path-container">
               <span
@@ -280,69 +274,52 @@
               ></span>
               <p class="shrink-p" style="color: lightgray">\</p>
               <p class="shrink-p" style="color: #1a2d44; font-size: 12px">
-                パスワード変更
+                新規アカウント登録
               </p>
             </div>
             <div class="page-form">
-              <p class="shrink-p page-title">パスワード変更</p>
-              <div class="form-group">
-                <label class="form-label"
-                  >現在パスワード: <span class="required">*</span></label
-                >
-                <div class="input-container">
-                  <input
-                    type="password"
-                    id="current-password"
-                    class="form-input"
-                    placeholder=""
-                  />
-                  <span
-                    toggle="#current-password"
-                    class="toggle-password toggle-current-password fas fa-eye-slash"
-                    onclick="togglePassword(`current-password`)"
-                  ></span>
+              <p class="shrink-p page-title">新規アカウント登録</p>
+              <div class="steps-container">
+                <div class="step active">1. 利用規約</div>
+                <div class="step">2. 情報登録</div>
+                <div class="step">3. 登録完了</div>
+              </div>
+              <p class="shrink-p page-subtitle">ご登録前の確認事項</p>
+              <div class="register-information-box">
+                <div class="information-box">
+                  <div class="d-flex flex-column gap-2">
+                    <div class="checkbox-container">
+                      <input type="checkbox" id="terms" />
+                      <label for="terms"
+                        ><a href="#"><span>利用規約</span></a
+                        >に同意する</label
+                      >
+                    </div>
+                    <div class="checkbox-container">
+                      <input type="checkbox" id="privacy-policy" />
+                      <label for="privacy-policy"
+                        ><a href="#"><span>個人情報保護方針</span></a
+                        >を確認した</label
+                      >
+                    </div>
+                    <div class="checkbox-container">
+                      <input type="checkbox" id="precautions" />
+                      <label for="precautions"
+                        ><a href="#"><span>注意事項</span></a
+                        >を確認した</label
+                      >
+                    </div>
+                  </div>
+                  <div class="register-button-box">
+                    <button class="btn rounded-pill register-left-button">
+                      個人負担で受講される方
+                    </button>
+                    <button class="btn rounded-pill register-right-button">
+                      会社負担で受講される方
+                    </button>
+                  </div>
                 </div>
               </div>
-              <div class="form-group">
-                <label class="form-label"
-                  >新しいパスワード： <span class="required">*</span></label
-                >
-                <div class="input-container">
-                  <input
-                    type="password"
-                    id="new-password"
-                    class="form-input"
-                    placeholder=""
-                  />
-                  <span
-                    toggle="#new-password"
-                    class="toggle-password toggle-new-password fas fa-eye-slash"
-                    onclick="togglePassword(`new-password`)"
-                  ></span>
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="form-label"
-                  >新しいパスワード確認： <span class="required">*</span></label
-                >
-                <div class="input-container">
-                  <input
-                    type="password"
-                    id="confirm-password"
-                    class="form-input"
-                    placeholder=""
-                  />
-                  <span
-                    toggle="#confirm-password"
-                    class="toggle-password toggle-confirm-password fas fa-eye-slash"
-                    onclick="togglePassword(`confirm-password`)"
-                  ></span>
-                </div>
-              </div>
-
-              <button class="btn rounded-pill btn-warning">
-                パスワード変更
-              </button>
             </div>
           </div>
         </div>
@@ -378,7 +355,7 @@
       </footer>
     </div>
 
-    <script src="../js/change-password.js"></script>
+    <script src="../js/register.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
