--- a/pages/signin.html
+++ b/pages/signin.html
@@ -119,18 +119,18 @@
                   </ul>
                 </div>
                 <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
-                  <button
+                  <a
                     type="button"
-                    class="rounded-pill bg-white flex-grow-1 scale-text sign-in-button"
-                    onclick="login()"
+                    class="btn rounded-pill bg-white flex-grow-1 scale-text sign-in-button"
+                    href="../pages/signin.html"
                   >
                     新規登録
-                  </button>
+                  </a>
                   <a
                     type="button"
                     class="btn rounded-pill text-white flex-grow-1 scale-text sign-in-button"
                     style="padding-left: 24px; padding-right: 24px"
-                    href="#"
+                    href="../pages/register.html"
                   >
                     ログイン
                   </a>
@@ -223,7 +223,10 @@
                                 </div>
                               </li>
                               <li>
-                                <div class="dropdown-item d-flex gap-2" onclick="location.href='./change-password.html';">
+                                <div
+                                  class="dropdown-item d-flex gap-2"
+                                  onclick="location.href='./change-password.html';"
+                                >
                                   <span
                                     ><i class="fa-solid fa-pen-to-square"></i
                                   ></span>
@@ -272,9 +275,13 @@
 
           <div class="sign-in-form-container">
             <div class="path-container">
-              <span><i class="fa-solid fa-house"></i></span>
-              <p class="shrink-p">\</p>
-              <p class="shrink-p" style="color: #1a2d44">ログイン</p>
+              <span
+                ><i class="fa-solid fa-house" style="color: lightgray"></i
+              ></span>
+              <p class="shrink-p" style="color: lightgray">\</p>
+              <p class="shrink-p" style="color: #1a2d44; font-size: 12px">
+                ログイン
+              </p>
             </div>
             <div class="sign-in-form">
               <p class="shrink-p sign-in-title">ログイン</p>
@@ -306,7 +313,11 @@
                   <label for="remember">ログイン情報保存</label>
                 </div>
               </div>
-              <button class="btn rounded-pill sign-in-form-button">
+              <button
+                class="btn rounded-pill sign-in-form-button"
+                onclick="onLogin()"
+                type="button"
+              >
                 サインイン
               </button>
               <p class="shrink-p forgot-text">パスワード忘れた方？</p>
@@ -354,6 +365,13 @@
     </div>
 
     <script src="../js/signin.js"></script>
+
+    <script>
+      function onLogin() {
+        location.href = "../index.html";
+        login();
+      }
+    </script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
