--- a/pages/register.html
+++ b/pages/register.html
@@ -287,7 +287,7 @@
               <p class="shrink-p page-subtitle">ご登録前の確認事項</p>
               <div class="register-information-box">
                 <div class="information-box">
-                  <div class="d-flex flex-column gap-2">
+                  <div class="d-flex flex-column gap-2 agreement-box">
                     <div class="checkbox-container">
                       <input type="checkbox" id="terms" />
                       <label for="terms"
